--- a/datatags-app/app/views/comps/rejectPanel.scala.html
+++ b/datatags-app/app/views/comps/rejectPanel.scala.html
@@ -2,11 +2,11 @@
 @import edu.harvard.iq.datatags.model.graphs.nodes.RejectNode
 @import Helpers.{o2o, renderMarkdown}
 @(node:RejectNode, kitKey: KitKey, loc:Localization,
-        answerHistory:Seq[AnswerRecord], enableComments:Boolean)
+        answerHistory:Seq[AnswerRecord], enableComments:Boolean)(implicit msgs: MessagesProvider)
 <div class="card">
   <div class="card-header bg-danger text-white d-flex">
     <div class="flex-grow-1">
-      Rejection
+      @Messages("interview.rejection")
     </div>
     @if( enableComments ){
       <div>
