--- a/datatags-app/app/views/backoffice/commentViewer.scala.html
+++ b/datatags-app/app/views/backoffice/commentViewer.scala.html
@@ -3,7 +3,7 @@
 @import edu.harvard.iq.datatags.model.graphs.nodes.AskNode
 @import edu.harvard.iq.datatags.model.graphs.nodes.RejectNode
 @import edu.harvard.iq.datatags.model.PolicyModel
-@(cmt:Comment, kit:VersionKit, loc:Localization, readmeOpt:Option[MarkupString])
+@(cmt:Comment, kit:VersionKit, loc:Localization, readmeOpt:Option[MarkupString])(implicit msgs: MessagesProvider)
 
 @templates.backend("Comment Viewer", 'backOffice ) {
   <div class="row my-2">
@@ -15,12 +15,12 @@
         <div class="float-right">
           <button class="btn btn-secondary"
                   onclick="Comments.setResolved(this, 'commentStatus', @cmt.id, @if(cmt.resolved){false}else{true})">
-                  Mark as @if(cmt.resolved){Unresolved}else{Resolved}</button>
+                  @Messages("interview.markAs") @if(cmt.resolved){Messages("interview.unresolved")}else{Messages("interview.resolved")}</button>
           <button class="btn btn-danger"
                   onclick="Comments.deleteComment('@cmt.id', '@kit.md.id.modelId', '@kit.md.id.version')">
-                  Delete Comment</button>
+                  @Messages("interview.comment.delete")</button>
         </div>
-        Comment @comps.commentStatus(cmt, Some("commentStatus"))
+        @Messages("interview.comment") @comps.commentStatus(cmt, Some("commentStatus"))
       </h3>
       <div>
         <em>@cmt.writer</em> commented at @Helpers.dateTimeFormat(cmt.time)
@@ -36,7 +36,7 @@
 
   <div class="row my-2">
     <div class="col">
-      <h4>Comment Context</h4>
+      <h4>@Messages("interview.comment.context")</h4>
       <div class="commentSubjectCtnr" @if(loc.isRtl){style="direction:rtl; text-align:right"}>
         @if(cmt.targetType.trim == "meta"){
           @cmt.targetContent.trim match {
