--- a/datatags-app/app/views/interview/showReadme.scala.html
+++ b/datatags-app/app/views/interview/showReadme.scala.html
@@ -1,6 +1,6 @@
 @import edu.harvard.iq.datatags.externaltexts.MarkupString
 @import edu.harvard.iq.datatags.externaltexts.Localization
-@( qKit:VersionKit, readme:MarkupString, title:String, subTitle:String, loc:Localization)(implicit req:Request[_])
+@( qKit:VersionKit, readme:MarkupString, title:String, subTitle:String, loc:Localization)(implicit req:Request[_], msgs: MessagesProvider)
 
 @scripts = {
   <script type="text/javascript" src="@routes.Application.javascriptRoutes"></script>
@@ -15,14 +15,14 @@
 
 @import views.Helpers
 
-@templates.bsNavBar(qKit.policyModel.get.getMetadata.getTitle + ": README", 'tag, scripts, extraHead) {
+@templates.bsNavBar(qKit.policyModel.get.getMetadata.getTitle + ": " + Messages("interview.readme"), 'tag, scripts, extraHead) {
 <div class="row">
   <div class="col">
     <div>
       <strong>@title</strong>
       @if( Helpers.hasContent(subTitle) ) {
          @subTitle
-      } &gt; README
+      } &gt; @Messages("interview.readme")
     </div>
   </div>
 </div>
@@ -40,20 +40,20 @@
   <div class="row my-2">
     <div class="col">
       <div class="text-center">
-        <a href="@routes.InterviewCtrl.startInterviewPostReadme(qKit.md.id.modelId, qKit.md.id.version)" class="btn btn-primary btn-lg">Start</a>
+        <a href="@routes.InterviewCtrl.startInterviewPostReadme(qKit.md.id.modelId, qKit.md.id.version)" class="btn btn-primary btn-lg">@Messages("interview.start")</a>
       </div>
     </div>
   </div>
   <div class="row">
     <div class="col">
       <details>
-        <summary>Policy Space</summary>
+        <summary>@Messages("interview.policySpace")</summary>
         <h3>
           @if( qKit.md.commentingStatus != CommentingStatus.Closed ) {
             <div class="float-eol">
             @comps.comments("cmntPS", qKit.md.id.modelId, qKit.md.id.version, loc.getLanguage, "meta", "policy-space")
             </div>}
-          Policy Space</h3>
+          @Messages("interview.policySpace")</h3>
         @comps.tagType(qKit.policyModel.get.getSpaceRoot, loc )
       </details>
     </div>
