TODO slots don't take too much space (closes #62)

--- a/datatags-app/app/assets/css/main.less
+++ b/datatags-app/app/assets/css/main.less
@@ -362,9 +362,7 @@ table.engine-trace {
   }
 }
 .tagtype-todo {
-  .valueAtom {
-    background-color: #2ba02a;
-  }
+  background-color: rgba(220,220,220,.8);
 }
 .tagtype-aggregate {
   .valueAtom {
