--- a/datatags-app/app/views/comps/tagType.scala.html
+++ b/datatags-app/app/views/comps/tagType.scala.html
@@ -40,9 +40,9 @@
 @todoType( tp: ToDoSlot ) = {
   <div class="tagtype tagtype-todo">
     @slotTypeTitle(tp, loc, "value placeholder")
-    <div class="typeValues">
-        <span class="valueAtom">TODO</span>
-    </div>
+@*    <div class="typeValues">*@
+@*        <span class="valueAtom">TODO</span>*@
+@*    </div>*@
   </div>
 }
 
