--- a/datatags-app/app/views/interview/showReadme.scala.html
+++ b/datatags-app/app/views/interview/showReadme.scala.html
@@ -52,8 +52,7 @@
           @if( qKit.md.commentingStatus != CommentingStatus.Closed ) {
             <div class="float-eol">
             @comps.comments("cmntPS", qKit.md.id.modelId, qKit.md.id.version, loc.getLanguage, "meta", "policy-space")
-            </div>}
-          @Messages("interview.policySpace")</h3>
+            </div>}</h3>
         @comps.tagType(qKit.policyModel.get.getSpaceRoot, loc )
       </details>
     </div>
