--- a/datatags-app/app/assets/css/styledInputs.less
+++ b/datatags-app/app/assets/css/styledInputs.less
@@ -18,6 +18,12 @@ input[type=checkbox]:checked + label.buttonLike,  input[type=radio]:checked + la
   top: 2px;
 }
 
+input[type=checkbox]:checked + label.buttonLikeGrayBackground {
+  background-color: rgba(255,255,255,0.75);
+  box-shadow: 0 0 3px rgba(128,255,200,.25) inset;
+  top: 2px;
+}
+
 input[type=checkbox] + label.buttonLike{
 
 }
