--- a/datatags-app/app/views/comps/visibility/valueAtomVisibility.scala.html
+++ b/datatags-app/app/views/comps/visibility/valueAtomVisibility.scala.html
@@ -8,8 +8,8 @@
           .getOrElse( new LocalizationTexts(PolicySpaceHelper.name(value), PolicySpaceHelper.note(value), null))
 ){ texts =>
 
-  <input class="hidden" type="checkbox" name="topValues[]" value="@path.@value.getName" id="@path.@value.getName" @if(versionMD.topValues.contains(path + "." + value.getName())) {checked}>
-  <label class="buttonLikeGrayBackground buttonLike" for="@path.@value.getName">
+  <input class="hidden" type="checkbox" name="topValues[]" value="@path-@value.getName" id="@path-@value.getName" @if(versionMD.topValues.contains(path + "-" + value.getName())) {checked}>
+  <label class="buttonLikeGrayBackground buttonLike" for="@path-@value.getName">
   @if( texts.smallNote==null || texts.smallNote.isEmpty ) {
     <span class="valueAtom">@texts.name</span>
   } else {
