--- a/datatags-app/app/views/interview/accepted.scala.html
+++ b/datatags-app/app/views/interview/accepted.scala.html
@@ -1,7 +1,11 @@
 @import edu.harvard.iq.datatags.externaltexts.Localization
 @import edu.harvard.iq.datatags.model.values.AtomicValue
+@import edu.harvard.iq.datatags.model.values.AbstractValue
+@import edu.harvard.iq.datatags.model.slots.AbstractSlot
 @( session :InterviewSession,
-   codeTag :Option[edu.harvard.iq.datatags.model.values.AbstractValue]
+   codeTag :Option[edu.harvard.iq.datatags.model.values.AbstractValue],
+        topValues:Seq[AbstractValue],
+        topSlots:Seq[AbstractSlot]
 )(implicit req:Request[_], msgs: MessagesProvider)
 
 @scripts = {
@@ -35,7 +39,7 @@
           </ul>
           <div class="tab-content" id="resultTabsContent">
             <div class="tab-pane show active" id="detailedTab" role="tabpanel" aria-labelledby="detailedTabTitle">
-              @comps.tagValueDetailed(session.tags, session.localization, session.kit.md.slotsVisibility)
+              @comps.tagValueDetailed(session.tags, session.localization, session.kit.md.slotsVisibility, topValues, topSlots)
             </div>
             <div class="tab-pane fade" id="summaryTab" role="tabpanel" aria-labelledby="summaryTabTitle">
               @comps.tagValue(session.tags, session.localization)
